# DuckAndCat

./: README.md
backend/: .env.example  Procfile  elevenlabs_client.py  main.py  pyproject.toml  requirements.txt  roleplay.py
frontend/: Makefile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/auth/callback/: route.ts
frontend/src/app/auth/login/: page.tsx
frontend/src/app/students/roleplay/[code]/: page.tsx
frontend/src/app/teachers/: layout.tsx  page.tsx
frontend/src/app/vocabulary/: layout.tsx  page.tsx
frontend/src/components/: ConversationList.tsx  CreateRoleplayDialog.tsx  RoleplayCard.tsx  RoleplayList.tsx  Sidebar.tsx  TeacherOnboardingDialog.tsx  Transcript.tsx
frontend/src/contexts/: TeacherContext.tsx
frontend/src/utils/: date.ts  types.ts  utils.ts
frontend/src/utils/api/: client.ts
frontend/src/utils/supabase/: database.types.ts  middleware.ts
frontend/supabase/: config.toml
